Bug 516808 - Direct scanout doesn't work when cursor is on another monitor
Summary: Direct scanout doesn't work when cursor is on another monitor
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: 6.6.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: multiscreen
Depends on:
Blocks:
 
Reported: 2026-02-27 18:17 UTC by Błażej Szczygieł
Modified: 2026-03-19 21:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Błażej Szczygieł 2026-02-27 18:17:14 UTC
SUMMARY
Direct scanout doesn't work when mouse cursor is on another monitor.

STEPS TO REPRODUCE
1. Connect 2 monitors (e.g. left and right).
2. Open full screen window which allows direct scanout on one monitor.
3. Move mouse cursor to another monitor.

OBSERVED RESULT
Compositing instead of direct scanout.

EXPECTED RESULT
Direct scanout (I guess cursor position doesn't matter for direct scanout which is on another monitor).

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.6.1
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Comment 1 Bug Janitor Service 2026-03-18 17:02:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8992
Comment 2 Zamundaaa 2026-03-18 17:38:27 UTC
Git commit b81b9e0dfe9043911910dbf948502a647ccb416f by Xaver Hugl.
Committed on 18/03/2026 at 17:01.
Pushed by zamundaaa into branch 'master'.

scene/workspacescene: fix direct scanout with overlay items on other screens

M  +2    -1    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/-/commit/b81b9e0dfe9043911910dbf948502a647ccb416f
Comment 3 Zamundaaa 2026-03-18 18:14:17 UTC
Git commit 00af7652b16b4047ba6c2e8fa71548da4e31412e by Xaver Hugl.
Committed on 18/03/2026 at 17:40.
Pushed by zamundaaa into branch 'Plasma/6.6'.

scene/workspacescene: fix direct scanout with overlay items on other screens


(cherry picked from commit b81b9e0dfe9043911910dbf948502a647ccb416f)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +2    -1    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/-/commit/00af7652b16b4047ba6c2e8fa71548da4e31412e