scene/workspacescene: fix direct scanout with overlay items on other screens

BUG: 516808


(cherry picked from commit b81b9e0dfe9043911910dbf948502a647ccb416f)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>